Disable clickable axis-labels, closes https://github.com/Gapminder/gapminder-tools-vizabi/issues/32

--- a/src/assets/style/_chart.scss
+++ b/src/assets/style/_chart.scss
@@ -39,9 +39,9 @@
 %vzb-chart-axis-title {
   color: $vzb-color-primary;
   fill: currentColor;
-  cursor: pointer;
+  //cursor: pointer;
     &:hover{
-        text-decoration: underline;
+        //text-decoration: underline;
     }
 }
 
